--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,12 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
+    "paths": {
+      "mt-slideshow": [
+        "dist/mt-slideshow/mt-slideshow",
+        "dist/mt-slideshow"
+      ]
+    },
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
