--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,7 @@
       "projectType": "library",
       "root": "projects/mt-slideshow",
       "sourceRoot": "projects/mt-slideshow/src",
-      "prefix": "lib",
+      "prefix": "mt",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
