--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,37 @@
           }
         }
       }
+    },
+    "mt-carousel": {
+      "projectType": "library",
+      "root": "projects/mt-carousel",
+      "sourceRoot": "projects/mt-carousel/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/mt-carousel/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/mt-carousel/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/mt-carousel/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/mt-carousel/src/test.ts",
+            "tsConfig": "projects/mt-carousel/tsconfig.spec.json",
+            "karmaConfig": "projects/mt-carousel/karma.conf.js"
+          }
+        }
+      }
     }
   },
   "defaultProject": "mt-slideshow"
