--- a/projects/mt-carousel/package.json
+++ b/projects/mt-carousel/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mt-slideshow",
-  "version": "0.0.3",
+  "name": "mt-carousel",
+  "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^12.2.0",
     "@angular/core": "^12.2.0"
@@ -8,13 +8,13 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "description": "A simple Slide Show for Angular with alt for SEO",
+  "description": "A simple Carousel for Angular with alt for SEO and caption with link",
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/masoudtahmasebi93/mt-slideshow.git"
   },
-  "keywords": ["javascript","Angular","MT Framework"],
+  "keywords": ["javascript","Angular","MT Framework","carousel"],
   "author": "Masoud Tahmasebi <mtahmasebi118@gmail.com> (http://masoudtahmasebi.ir)",
   "license": "MIT",
   "bugs": {
