--- a/projects/mt-carousel/package.json
+++ b/projects/mt-carousel/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mt-carousel",
-  "version": "0.0.1",
+  "name": "mt-a-carousel",
+  "version": "0.0.2",
   "peerDependencies": {
     "@angular/common": "^12.2.0",
     "@angular/core": "^12.2.0"
@@ -14,7 +14,12 @@
     "type": "git",
     "url": "git+https://github.com/masoudtahmasebi93/mt-slideshow.git"
   },
-  "keywords": ["javascript","Angular","MT Framework","carousel"],
+  "keywords": [
+    "javascript",
+    "Angular",
+    "MT Framework",
+    "carousel"
+  ],
   "author": "Masoud Tahmasebi <mtahmasebi118@gmail.com> (http://masoudtahmasebi.ir)",
   "license": "MIT",
   "bugs": {
