--- a/angular.json
+++ b/angular.json
@@ -64,6 +64,37 @@
           }
         }
       }
+    },
+    "mt-portfolio": {
+      "projectType": "library",
+      "root": "projects/mt-portfolio",
+      "sourceRoot": "projects/mt-portfolio/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/mt-portfolio/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/mt-portfolio/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/mt-portfolio/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/mt-portfolio/src/test.ts",
+            "tsConfig": "projects/mt-portfolio/tsconfig.spec.json",
+            "karmaConfig": "projects/mt-portfolio/karma.conf.js"
+          }
+        }
+      }
     }
   },
   "defaultProject": "mt-slideshow"
